fix: scrollbar tablet mediaquery

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,10 +132,18 @@
         display: none;
     }
 
+    ul::-webkit-scrollbar {
+        width: 0;
+    }
+
     /* RIGHT BOX */
 
     .right-box {
         width: 100%;
+    }
+
+    .chat-box::-webkit-scrollbar{
+        width: 0;
     }
 
     .right-box main {
